bk_ida/gccida/g0/expand_builtin_memcmp
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2711:65: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_builtin_memcmp( tree exp, tree arglist, rtx target, machine_mode mode) 
                                                                ^
                                                                enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2716:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2717:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2718:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2719:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2720:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2721:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2722:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2735:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode insn_mode; // [rsp+44h] [rbp-7Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2738:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *result; // [rsp+50h] [rbp-70h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2741:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *cst_uchar_ptr_node; // [rsp+68h] [rbp-58h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2742:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *cst_uchar_node; // [rsp+70h] [rbp-50h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2746:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *len; // [rsp+90h] [rbp-30h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2747:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *arg2; // [rsp+98h] [rbp-28h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2748:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *arg1; // [rsp+A0h] [rbp-20h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2801:37: error: use of undeclared identifier 'insn_data_0'
insn_mode = *( ( unsigned __int16 *)insn_data_0[1203].operand + 8); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2828:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( sizetype_tab[0]->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2843:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( integer_types[5]->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/builtins.c:2864:27: error: use of undeclared identifier 'machine_mode'
return convert_to_mode( ( machine_mode)modeb, result_0, 0); 
                          ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_memcmp/src/obj/builtins.o] Error 1
